--- a/src/pug/sections/_main-menu.pug
+++ b/src/pug/sections/_main-menu.pug
@@ -1,11 +1,13 @@
 //====menu-sidebar ======
-.sidebar
+.sidebar#header-menu
 	.main-menu
 		.main-menu-logo
 			a(href="index.html").logo.fly-center
 				img(src="./img/logo.webp", width="75" height="75" alt="logo")
 				p Инвестиционный портал РСО&#8209;Алания
-		
+			//===burger for mob menu ===
+			.menu-toggle#menu-toggle
+				span
 		.main-menu__block.fl-column
 			//===== main-menu-list====
 			.main-menu-list#main-menu-list
