--- a/src/scss/base/_typography.scss
+++ b/src/scss/base/_typography.scss
@@ -3,6 +3,10 @@
 }
 .h1{
 	font-size: 54px;
+	@media (max-width: 767px) {
+		font-size: 24px;
+		line-height: 1.3;
+	}
 	
 	
 }
@@ -58,6 +62,12 @@
 	font-size: 18px;
 	font-weight: 600;
 	line-height: 1.4;
+	@media (max-width: 1199px) {
+	  font-size: 14px;
+	}	
+	@media (max-width: 767px) {
+	  font-size: 12px;
+	}
 }
 
 .link-medium{font-size: 14px;}
