--- a/src/scss/base/_typography.scss
+++ b/src/scss/base/_typography.scss
@@ -3,9 +3,17 @@
 }
 .h1{
 	font-size: 54px;
+	@media (max-width: 1199px) {
+		font-size: 38px;
+		line-height: 1.3;
+	}
+	@media (max-width: 991px) {
+		font-size: 34px;
+		
+	}
 	@media (max-width: 767px) {
 		font-size: 24px;
-		line-height: 1.3;
+		
 	}
 	
 	
