--- a/src/scss/base/_base.scss
+++ b/src/scss/base/_base.scss
@@ -114,6 +114,9 @@ input[type="submit"] {
 .page-grid{
 	padding-left: 449px;
 	position: relative;
+	@media(max-width:1919px) {
+		padding-left: 300px;
+	}
 	@media (max-width: 1199px) {
 		padding-left: 0;
 		padding-top: 70px;
