--- a/src/scss/base/_typography.scss
+++ b/src/scss/base/_typography.scss
@@ -3,10 +3,14 @@
 }
 .h1{
 	font-size: 54px;
-	@media (max-width: 1199px) {
+	@media (max-width: 1439px) {
 		font-size: 38px;
 		line-height: 1.3;
 	}
+	// @media (max-width: 1199px) {
+	// 	font-size: 38px;
+	// 	line-height: 1.3;
+	// }
 	@media (max-width: 991px) {
 		font-size: 34px;
 		
