--- a/src/pug/sections/_header.pug
+++ b/src/pug/sections/_header.pug
@@ -16,7 +16,110 @@
 								img(src="../img/icons/target.svg", width="56" height="56" alt="alt")
 
 							.body-3 Корпорация развития - «одно окно» для инвесторов
-					+header-slider('target', 'Более 600 площадок для размещения производства')
+					+header-slider('icon2', 'Более 600 площадок для размещения производства')
 				
-					+header-slider('target', '4 территории с преференциальным режимом — ОЭЗ, ТОР')
-					+header-slider('target', 'Прогрессивная инвестиционная законодательная база')
+					+header-slider('icon3', '4 территории с преференциальным режимом — ОЭЗ, ТОР')
+					+header-slider('icon4', 'Прогрессивная инвестиционная законодательная база')
+
+//=======invest projects =======
+section.invest-projects
+	.container
+		h2.h2 Инвестиционные проекты реализуемые на территории республики
+		.invest-projects-slider.owl-carousel
+			//=== single-slide ====
+			.invest-projects__slide
+				//===============
+				.project-card
+					.project-card__img
+						img(src="./img/brend-logo1.webp", width="245" height="101" alt="logo")
+					.project-card__footer.fly-center
+						p ООО «А.РАЙМОНД РУС»(Франция)
+						a(href="#!").project-card__link
+							svg.svg-link
+								use(href="./img/spriteSvg.svg#svg-link")
+				//==================
+				.project-card
+					.project-card__img
+						img(src="./img/brend-logo2.webp", width="245" height="101" alt="logo")
+					.project-card__footer.fly-center
+						p РБПИ ГРУПП (Норвегия)
+						a(href="#!").project-card__link
+							svg.svg-link
+								use(href="./img/spriteSvg.svg#svg-link")
+			.invest-projects__slide
+				//===============
+				.project-card
+					.project-card__img
+						img(src="./img/brend-logo3.webp", width="245" height="101" alt="logo")
+					.project-card__footer.fly-center
+						p Бохимический холдинг «ОРГХИМ»(Россия)
+						a(href="#!").project-card__link
+							svg.svg-link
+								use(href="./img/spriteSvg.svg#svg-link")
+				//==================
+				.project-card
+					.project-card__img
+						img(src="./img/brend-logo4.webp", width="245" height="101" alt="logo")
+					.project-card__footer.fly-center
+						p ООО «ГРАНД-НН»(Россия)
+						a(href="#!").project-card__link
+							svg.svg-link
+								use(href="./img/spriteSvg.svg#svg-link")
+			.invest-projects__slide
+				//===============
+				.project-card
+					.project-card__img
+						img(src="./img/brend-logo5.webp", width="245" height="101" alt="logo")
+					.project-card__footer.fly-center
+						p ООО «ХОМА АДГЕЗИВ»(Россия)
+						a(href="#!").project-card__link
+							svg.svg-link
+								use(href="./img/spriteSvg.svg#svg-link")
+				//==================
+				.project-card
+					.project-card__img
+						img(src="./img/brend-logo6.webp", width="245" height="101" alt="logo")
+					.project-card__footer.fly-center
+						p ООО «Ателье Гончарова»(Россия)
+						a(href="#!").project-card__link
+							svg.svg-link
+								use(href="./img/spriteSvg.svg#svg-link")
+			.invest-projects__slide
+				//===============
+				.project-card
+					.project-card__img
+						img(src="./img/brend-logo1.webp", width="245" height="101" alt="logo")
+					.project-card__footer.fly-center
+						p ООО «А.РАЙМОНД РУС»(Франция)
+						a(href="#!").project-card__link
+							svg.svg-link
+								use(href="./img/spriteSvg.svg#svg-link")
+				//==================
+				.project-card
+					.project-card__img
+						img(src="./img/brend-logo2.webp", width="245" height="101" alt="logo")
+					.project-card__footer.fly-center
+						p ООО «А.РАЙМОНД РУС»(Франция)
+						a(href="#!").project-card__link
+							svg.svg-link
+								use(href="./img/spriteSvg.svg#svg-link")
+			.invest-projects__slide
+				//===============
+				.project-card
+					.project-card__img
+						img(src="./img/brend-logo3.webp", width="245" height="101" alt="logo")
+					.project-card__footer.fly-center
+						p ООО «А.РАЙМОНД РУС»(Франция)
+						a(href="#!").project-card__link
+							svg.svg-link
+								use(href="./img/spriteSvg.svg#svg-link")
+				//==================
+				.project-card
+					.project-card__img
+						img(src="./img/brend-logo4.webp", width="245" height="101" alt="logo")
+					.project-card__footer.fly-center
+						p ООО «А.РАЙМОНД РУС»(Франция)
+						a(href="#!").project-card__link
+							svg.svg-link
+								use(href="./img/spriteSvg.svg#svg-link")
+						
