--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -7,7 +7,7 @@
 @import "blocks/_buttons.scss";
 @import "blocks/_pagination.scss";
 @import "blocks/_components.scss";
-//@import "blocks/";
+@import "blocks/_project-card.scss";
 //@import "blocks/";
 //@import "blocks/";
 //@import "blocks/";
@@ -18,7 +18,7 @@
 //sections
 @import "sections/_header-slider.scss";
 @import "sections/_main-menu.scss";
-//@import "sections/";
+@import "sections/_invest-projects.scss";
 //@import "sections/";
 //@import "sections/";
 //@import "sections/";
