--- a/src/scss/base/_base.scss
+++ b/src/scss/base/_base.scss
@@ -95,7 +95,15 @@ input[type="submit"] {
 	width: 1350px;
 	margin-left: auto;
 	margin-right: auto;
-	
+	@media(max-width:1919px){
+		width: calc(100% - 100px);
+	}
+	@media(max-width:1599px) {
+		
+	}
+	@media(max-width:1364px) {
+		
+	}
 }
 section{
 	padding-top: 100px;
