--- a/src/scss/blocks/_project-card.scss
+++ b/src/scss/blocks/_project-card.scss
@@ -2,7 +2,8 @@
 	border-radius: 20px;
 	border: 1px solid $sec2;
 	background:  #FFF;
-	width: 430px;
+	max-width: 430px;
+	width: 100%;
 	height: 240px;
 	padding: 30px 20px;
 	display: flex;
@@ -11,7 +12,8 @@
 		flex-grow: 1;
 		padding-bottom: 40px;
 		img{
-			width: 245px;
+			width: 100%;
+			max-width: 245px;
 			height: 101px;
 			object-fit: contain;
 		}
