--- a/src/pug/sections/_header.pug
+++ b/src/pug/sections/_header.pug
@@ -25,9 +25,109 @@
 section.invest-projects
 	.container
 		h2.h2 Инвестиционные проекты реализуемые на территории республики
-		.invest-projects-slider.owl-carousel
-			//=== single-slide ====
-			.invest-projects__slide
+		.visible-768
+			.invest-projects-slider.owl-carousel
+				//=== single-slide ====
+				.invest-projects__slide
+					//===============
+					.project-card
+						.project-card__img
+							img(src="./img/brend-logo1.webp", width="245" height="101" alt="logo")
+						.project-card__footer.fly-center
+							p ООО «А.РАЙМОНД РУС»(Франция)
+							a(href="#!").project-card__link
+								svg.svg-link
+									use(href="./img/spriteSvg.svg#svg-link")
+					//==================
+					.project-card
+						.project-card__img
+							img(src="./img/brend-logo2.webp", width="245" height="101" alt="logo")
+						.project-card__footer.fly-center
+							p РБПИ ГРУПП (Норвегия)
+							a(href="#!").project-card__link
+								svg.svg-link
+									use(href="./img/spriteSvg.svg#svg-link")
+				.invest-projects__slide
+					//===============
+					.project-card
+						.project-card__img
+							img(src="./img/brend-logo3.webp", width="245" height="101" alt="logo")
+						.project-card__footer.fly-center
+							p Бохимический холдинг «ОРГХИМ»(Россия)
+							a(href="#!").project-card__link
+								svg.svg-link
+									use(href="./img/spriteSvg.svg#svg-link")
+					//==================
+					.project-card
+						.project-card__img
+							img(src="./img/brend-logo4.webp", width="245" height="101" alt="logo")
+						.project-card__footer.fly-center
+							p ООО «ГРАНД-НН»(Россия)
+							a(href="#!").project-card__link
+								svg.svg-link
+									use(href="./img/spriteSvg.svg#svg-link")
+				.invest-projects__slide
+					//===============
+					.project-card
+						.project-card__img
+							img(src="./img/brend-logo5.webp", width="245" height="101" alt="logo")
+						.project-card__footer.fly-center
+							p ООО «ХОМА АДГЕЗИВ»(Россия)
+							a(href="#!").project-card__link
+								svg.svg-link
+									use(href="./img/spriteSvg.svg#svg-link")
+					//==================
+					.project-card
+						.project-card__img
+							img(src="./img/brend-logo6.webp", width="245" height="101" alt="logo")
+						.project-card__footer.fly-center
+							p ООО «Ателье Гончарова»(Россия)
+							a(href="#!").project-card__link
+								svg.svg-link
+									use(href="./img/spriteSvg.svg#svg-link")
+				.invest-projects__slide
+					//===============
+					.project-card
+						.project-card__img
+							img(src="./img/brend-logo1.webp", width="245" height="101" alt="logo")
+						.project-card__footer.fly-center
+							p ООО «А.РАЙМОНД РУС»(Франция)
+							a(href="#!").project-card__link
+								svg.svg-link
+									use(href="./img/spriteSvg.svg#svg-link")
+					//==================
+					.project-card
+						.project-card__img
+							img(src="./img/brend-logo2.webp", width="245" height="101" alt="logo")
+						.project-card__footer.fly-center
+							p ООО «А.РАЙМОНД РУС»(Франция)
+							a(href="#!").project-card__link
+								svg.svg-link
+									use(href="./img/spriteSvg.svg#svg-link")
+				.invest-projects__slide
+					//===============
+					.project-card
+						.project-card__img
+							img(src="./img/brend-logo3.webp", width="245" height="101" alt="logo")
+						.project-card__footer.fly-center
+							p ООО «А.РАЙМОНД РУС»(Франция)
+							a(href="#!").project-card__link
+								svg.svg-link
+									use(href="./img/spriteSvg.svg#svg-link")
+					//==================
+					.project-card
+						.project-card__img
+							img(src="./img/brend-logo4.webp", width="245" height="101" alt="logo")
+						.project-card__footer.fly-center
+							p ООО «А.РАЙМОНД РУС»(Франция)
+							a(href="#!").project-card__link
+								svg.svg-link
+									use(href="./img/spriteSvg.svg#svg-link")
+
+		.visible-mobile
+			.invest-projects-slider.owl-carousel
+				//=== single-slide ====
+				
 				//===============
 				.project-card
 					.project-card__img
@@ -46,7 +146,7 @@ section.invest-projects
 						a(href="#!").project-card__link
 							svg.svg-link
 								use(href="./img/spriteSvg.svg#svg-link")
-			.invest-projects__slide
+		
 				//===============
 				.project-card
 					.project-card__img
@@ -65,7 +165,7 @@ section.invest-projects
 						a(href="#!").project-card__link
 							svg.svg-link
 								use(href="./img/spriteSvg.svg#svg-link")
-			.invest-projects__slide
+			
 				//===============
 				.project-card
 					.project-card__img
@@ -84,7 +184,7 @@ section.invest-projects
 						a(href="#!").project-card__link
 							svg.svg-link
 								use(href="./img/spriteSvg.svg#svg-link")
-			.invest-projects__slide
+			
 				//===============
 				.project-card
 					.project-card__img
@@ -103,7 +203,7 @@ section.invest-projects
 						a(href="#!").project-card__link
 							svg.svg-link
 								use(href="./img/spriteSvg.svg#svg-link")
-			.invest-projects__slide
+			
 				//===============
 				.project-card
 					.project-card__img
@@ -122,4 +222,4 @@ section.invest-projects
 						a(href="#!").project-card__link
 							svg.svg-link
 								use(href="./img/spriteSvg.svg#svg-link")
-						
+					
