--- a/src/scss/sections/_invest-projects.scss
+++ b/src/scss/sections/_invest-projects.scss
@@ -1,12 +1,23 @@
 .invest-projects{
 	background-color: $sec4;
-	.h2{max-width: 800px;}
+	.h2{
+		max-width: 800px;
+		@media (max-width: 767px) {
+		  margin-bottom: 70px;
+		}
 	
-
+	}
+	overflow: hidden;
 }
-.owl-carousel .owl-nav{
+.invest-projects-slider{
+	@media (max-width: 767px) {
+	  width: calc(50% + 50vw);
+	}
+}
+.invest-projects{
+	.owl-carousel .owl-nav{
 		position: absolute;
-		top: -40px;
+		top: -55px;
 		right: 0;
 		width: fit-content;
 		display: flex;
@@ -16,7 +27,18 @@
 					fill:#A9ADC6;
 				}
 		}
+		@media (max-width: 767px) {
+		   top: -35px;
+		   left: 50%;
+		   transform: translateX(-50%);
+		   right: auto;
+		   width:100%;
+		   display: flex;
+		   justify-content: space-between;
+			padding-right: 15px;
+		}
 	}
+}
 .owl-carousel .owl-nav button.owl-next:hover,.owl-carousel .owl-nav button.owl-prev:hover{
 	svg{fill: $ac1;}
 }
