--- a/src/pug/pages/main.pug
+++ b/src/pug/pages/main.pug
@@ -4,6 +4,8 @@ block content
 	.page-grid
 		include ../sections/_main-menu
 		include ../sections/_header.pug
+		include ../sections/_invest-projects.pug
+	include ../sections/_footer.pug
 	
 block variables
 	-var title = "Главная";
