--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -19,11 +19,11 @@
 @import "sections/_header-slider.scss";
 @import "sections/_main-menu.scss";
 @import "sections/_invest-projects.scss";
+@import "sections/_news.scss";
 //@import "sections/";
 //@import "sections/";
 //@import "sections/";
-//@import "sections/";
-//@import "sections/";
+@import "sections/_footer.scss";
 
 
  
