--- a/src/scss/blocks/_buttons.scss
+++ b/src/scss/blocks/_buttons.scss
@@ -18,7 +18,9 @@
 	@media (max-width: 1199px) {
 	  height: 46px;
 	  font-size: 14px;
-	  padding: 13px 20px;
+	  padding: 13px 20px 14px;
+	  width: 100%;
+	  max-width: 320px;;
 	}
 }
 .btn-accent:hover{
