--- a/src/pug/sections/_footer.pug
+++ b/src/pug/sections/_footer.pug
@@ -7,9 +7,9 @@ footer.footer#footer
 				p Инвестиционный портал РСО&#8209;Алания
 			.btn-wrapper
 				button(type="button").btn-accent
-					span Подписаться
+					span Подписаться на новости
 					svg.svg-plus
-						use(href="../img/spriteSvg.svg#svg-plus")
+						use(href="../img/spriteSvg.svg#svg-mail")
 		
 		.footer-menu
 			//==== один список меню ====
