--- a/src/scss/base/_base.scss
+++ b/src/scss/base/_base.scss
@@ -77,6 +77,7 @@ button {
 	box-shadow: none;
 	cursor: pointer;
 	font-family: inherit;
+	font-size: inherit;
 }
 
 input[type="submit"] {
@@ -92,9 +93,12 @@ input[type="submit"] {
 	-webkit-appearance: none;
 }
 .container{
-	width: 1350px;
+	width: 1750px;
 	margin-left: auto;
 	margin-right: auto;
+	@media(max-width:2399px) {
+		width: 1350px;
+	}
 	@media(max-width:1919px){
 		width: calc(100% - 100px);
 	}
@@ -108,12 +112,33 @@ input[type="submit"] {
 section{
 	padding-top: 100px;
 	padding-bottom: 100px;
+	padding-left: 449px;
 	.h2 {margin-bottom: 40px;}
+		@media(max-width:1919px) {
+			padding-left: 300px;
+		}
+	
+		@media (max-width: 1199px) {
+			padding-left: 0;
+	
+		}
 	@media (max-width: 767px) {
 		padding-top: 60px;
 		padding-bottom: 60px;
 		.h2{margin-bottom: 20px;}
 	}
+}
+.header-slider-wrapper{
+	padding-left: 449px;
+	@media(max-width:1919px) {
+		padding-left: 300px;
+	}
+
+	@media (max-width: 1199px) {
+		padding-left: 0;
+
+	}
+
 }
  .fl-block,.fly-center,.fly-center, .fl-center, .fl-column{
 	display: flex;
@@ -157,14 +182,13 @@ section{
 		display: none !important;
 	}
 }
+
 .page-grid{
-	padding-left: 449px;
+	
 	position: relative;
-	@media(max-width:1919px) {
-		padding-left: 300px;
-	}
+	
 	@media (max-width: 1199px) {
-		padding-left: 0;
+		
 		padding-top: 70px;
 	}	
 	
