--- a/src/scss/base/_typography.scss
+++ b/src/scss/base/_typography.scss
@@ -73,6 +73,7 @@
 .body-3{
 	font-size: 18px;
 	font-weight: 600;
+	font-family: $semi;
 	line-height: 1.4;
 	@media (max-width: 1199px) {
 	  font-size: 14px;
