--- a/src/scss/sections/_main-menu.scss
+++ b/src/scss/sections/_main-menu.scss
@@ -20,7 +20,8 @@
 	}
 }
 .sidebar.hide{
-	transform: translateX(-110%);
+	@media(min-width:1200px){transform: translateX(-110%);}
+	
 }
 .main-menu{
 	
@@ -95,6 +96,7 @@
 	column-gap: 20px;
 	color: $sec;
 	font-weight: 600;
+	font-family: $semi;
 	@media (max-width: 1199px) {
 		column-gap: 10px;
 	}
@@ -124,6 +126,7 @@
 	background-color: #fff;
 	color: $pr;
 	font-weight: 600;
+	font-family: $semi;
 	border-bottom: 1px solid $sec2;
 	font-size: 16px;
 	@media (max-width: 1199px) {
@@ -175,6 +178,7 @@
 		line-height: 1.3;
 		color: $sec;
 		font-weight: 700;
+		font-family: $bold;
 		white-space: nowrap;
 		&:hover{
 			color: $ac1;
