--- a/src/pug/pages/main.pug
+++ b/src/pug/pages/main.pug
@@ -5,6 +5,9 @@ block content
 		include ../sections/_main-menu
 		include ../sections/_header.pug
 		include ../sections/_invest-projects.pug
+		include ../sections/_news.pug
+	
+	//====footer======
 	include ../sections/_footer.pug
 	
 block variables
