--- a/src/scss/base/_typography.scss
+++ b/src/scss/base/_typography.scss
@@ -47,6 +47,12 @@
 	font-family: $semi;
 	font-weight: 600;
 }
+.txt-clamp{
+	display: -webkit-box;
+	-webkit-line-clamp: 3;
+	-webkit-box-orient: vertical;
+	overflow: hidden;
+}
 .link, .link-medium, .link-small{
 	font-size: 16px;
 	font-weight: 400;
